# zero-trust-iot

./: CMakeLists.txt  README.md
examples/: context-drift-test.cc  context-test.cc  micro-segmentation-test.cc  trust-scorer-test.cc  zt-atm-demo.cc  zt-demo.cc  zt-test.cc
model/: zt-certificate.cc  zt-certificate.h  zt-context-drift-validator.cc  zt-context-drift-validator.h  zt-dynamic-trust-scorer.cc  zt-dynamic-trust-scorer.h  zt-encryption-utils.cc  zt-encryption-utils.h  zt-hash-utils.cc  zt-hash-utils.h  zt-identity-registry.cc  zt-identity-registry.h  zt-ipv4-hook.cc  zt-ipv4-hook.h  zt-logger.cc  zt-logger.h  zt-policy-engine.cc  zt-policy-engine.h  zt-tls-handshake.cc  zt-tls-handshake.h
